--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -10,7 +10,7 @@ jobs:
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          password: ${{ secrets.DOCKER_TOKEN }}
       - name: Build and push to DockerHub
         uses: docker/build-push-action@v5.3.0
         with:
