--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -9,8 +9,8 @@ jobs:
       - name: Login to DockerHub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_TOKEN }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Build and push to DockerHub
         uses: docker/build-push-action@v5.3.0
         with:
