--- a/conf/Dockerfile
+++ b/conf/Dockerfile
@@ -1,8 +1,20 @@
-FROM rocker/tidyverse:4.2.1
+FROM rocker/r-ver:4.2.1
+
+RUN apt-get update && apt-get install -y \
+libz-dev
 
 RUN install2.r --error \
 littler \
 BiocManager \
+&& rm -rf /tmp/downloaded_packages
+
+COPY conf/bioc-requirements.r .
+RUN Rscript -e 'requireNamespace("BiocManager"); BiocManager::install(ask=F);' \
+&& Rscript bioc-requirements.r \
+&& rm -rf /tmp/downloaded_packages
+
+RUN install2.r --error \
+tidyverse \
 Signac \
 Seurat \
 SeuratObject \
