further changes to Dockerfile

--- a/conf/Dockerfile
+++ b/conf/Dockerfile
@@ -10,14 +10,6 @@ libxml2-dev
 RUN install2.r --error \
 littler \
 BiocManager \
-&& rm -rf /tmp/downloaded_packages
-
-COPY conf/bioc-requirements.r .
-RUN Rscript -e 'requireNamespace("BiocManager"); BiocManager::install(ask=F);' \
-&& Rscript bioc-requirements.r \
-&& rm -rf /tmp/downloaded_packages
-
-RUN install2.r --error \
 tidyverse \
 Signac \
 Seurat \
@@ -27,3 +19,9 @@ assertthat \
 future \
 argparse \
 && rm -rf /tmp/downloaded_packages
+
+COPY conf/bioc-requirements.r .
+RUN Rscript -e 'requireNamespace("BiocManager"); BiocManager::install(ask=F);' \
+&& Rscript bioc-requirements.r
+
+
