renaming workflow, updated config + added libglpk-dev to docker

--- a/conf/workflow.config
+++ b/conf/workflow.config
@@ -25,45 +25,74 @@ params {
     }
 
     // Output settings
-    outdir = "${launchDir}/output"
+    outdir = "${launchDir}/snomics_to_seurat_output"
+}
+
+// ------- SINGULARITY SETTINGS ------- //
+singularity {
+  enabled = true
+  autoMounts = true
+  cacheDir = "/rds/general/user/mat21/home/containers"
+  runOptions = "-B /rds/,/rdsgpfs/,/rds/general/ephemeral/user/$USER/ephemeral/tmp/:/tmp,/rds/general/ephemeral/user/$USER/ephemeral/tmp/:/var/tmp"
+}
+
+process{
+    container = "mikerobiology/snomics_to_seurat:latest"
+}
+
+// ------- HPC SETTINGS ------- //
+env {
+  TMPDIR="/rds/general/ephemeral/user/$USER/ephemeral/tmp/"
+}
+
+workDir = "/rds/general/ephemeral/user/$USER/ephemeral/tmp/"
+
+process{
+    shell = ['/bin/bash', '-euo', 'pipefail']
+    executor = 'local'
 }
 
 
-// ------- PIPELINE SETTINGS ------- //
-workDir = "/rds/general/ephemeral/user/$USER/ephemeral/tmp/"
+executor {
+    $pbspro {
+	    queueSize = 45
+        maxForks = 45
+        submitRateLimit = '1sec'
+    } 
 
+    //queue  = 'v1_short8'
+    //cpus = 32
+    //memory = 128.GB
+    //time = 3.h
+}
 
 // ------- PUBLISH SETTINGS ------- //
-
 process {
-    if (params.merge_samples) {
-        withName: MERGE {
-            overwrite: true
-            path: "${params.outdir}/merged/"
-            mode: "copy"
+    if (params.save_individual || !params.merge_samples) {
+        withName: LOAD {
+            publishDir = [
+                overwrite: true,
+                path: "${params.outdir}/individual/",
+                mode: "copy"
+            ]
         }
     }
 
-    if (params.save_individual || !params.merge_samples) {
-        withName: LOAD {
-            overwrite: true
-            path: "${params.outdir}/individual/"
-            mode: "copy"
+    if (params.merge_samples) {
+        withName: MERGE {
+            publishDir = [
+                overwrite: true,
+                path: "${params.outdir}/merged/",
+                mode: "copy"
+            ]
         }
     }
 
     withName: SAVE_PARAMS {
-        overwrite: true
-        path: "${params.outdir}"
-        mode: "copy"
+        publishDir = [
+            overwrite: true,
+            path: "${params.outdir}",
+            mode: "copy"
+        ]
     }
 }
-
-
-// ------- CONDA SETTINGS ------- //
-conda {
-    enabled = true
-    useMamba = true
-    cacheDir = "${launchDir}/conda_cache/"
-}
-
