--- a/conf/conda_env.yml
+++ b/conf/conda_env.yml
@@ -15,3 +15,4 @@ dependencies:
   - bioconductor-ensdb.hsapiens.v86
   - bioconductor-bsgenome.hsapiens.ucsc.hg38
   - bioconductor-genomicranges
+  - bioconductor-biovizbase
