commit main code version; correcting r-matrix version for integration

--- a/conf/conda_env.yml
+++ b/conf/conda_env.yml
@@ -12,6 +12,8 @@ dependencies:
   - r-assertthat
   - r-future
   - r-argparse
+  - r-matrix=1.6_1
+  - r-irlba
   - bioconductor-ensdb.hsapiens.v86
   - bioconductor-bsgenome.hsapiens.ucsc.hg38
   - bioconductor-genomicranges
