--- a/nextflow.config
+++ b/nextflow.config
@@ -5,22 +5,26 @@ params {
     join_projects = false
     merge_samples = true
     save_individual = false
+    save_unintegrated = false
 
     // Processing settings
     sample_column = "sample"
     gex_source = "cellbender"
+    processing_size = 2
+    integration_memory = "auto" // not yet implemented
 
     QC {
 
-        // QC settings (comment out will remove filter)
-        expressed_gene_threshold = 1
-        min_rna_count_per_cell = 400
+        //QC settings (comment out will remove filter)
+        expressed_gene_threshold = 10
+        min_rna_count_per_cell = 500
         max_rna_count_per_cell = 25000
         min_atac_count_per_cell = 1000
         max_atac_count_per_cell = 100000
         max_mitochondrial_gene_pct = 10
         max_nucleosome_signal = 3
         min_tss_enrichment = 1
+        min_cells_per_sample = 50
 
     }
 
@@ -49,7 +53,42 @@ workDir = "/rds/general/ephemeral/user/$USER/ephemeral/tmp/"
 
 process{
     shell = ['/bin/bash', '-euo', 'pipefail']
-    executor = 'local'
+    executor = 'pbspro'
+    queue = 'v1_short8'
+    cache = 'lenient'
+    cpus = 8
+    memory = 64.GB
+    time = 30.m
+
+    withLabel: 'local' {
+        executor = 'local'
+        cpus = 1
+        memory = 4.GB
+    }
+
+    withName: LOAD {
+        cpus = 5
+        memory = 64.GB
+        time = 30.m
+    }
+
+    withName: FIND_FEATURES {
+        cpus = 2
+        memory = 128.GB
+        time = 30.m
+    }
+
+    withName: REBASE_FEATURES {
+        cpus = 5
+        memory = 64.GB
+        time = 30.m
+    }
+
+    withName: MERGE {
+        cpus = 20
+        memory = 256.GB
+        time = 2.h
+    }
 }
 
 
@@ -58,13 +97,14 @@ executor {
 	    queueSize = 45
         maxForks = 45
         submitRateLimit = '1sec'
-    } 
+        queueSize = 45
+        maxForks = 45
+    }
 
-    //queue  = 'v1_short8'
-    //cpus = 32
-    //memory = 128.GB
-    //time = 3.h
-    cpus=16
+    $local {
+        queueSize = 1
+        maxForks = 1
+    }
 }
 
 // ------- PUBLISH SETTINGS ------- //
@@ -96,4 +136,11 @@ process {
             mode: "copy"
         ]
     }
+}
+
+// ------- ERROR SETTINGS ------- //
+process {
+    errorStrategy = errorStrategy = 'retry'
+    maxRetries    = 2
+    maxErrors     = '-1'
 }
