first functional version

--- a/nextflow.config
+++ b/nextflow.config
@@ -11,12 +11,11 @@ params {
     sample_column = "sample"
     gex_source = "cellbender"
     processing_size = 2
-    integration_memory = "auto" // not yet implemented
 
     QC {
 
-        //QC settings (comment out will remove filter)
-        expressed_gene_threshold = 10
+        expressed_gene_count = 10
+        expressed_gene_sample_pct = 10
         min_rna_count_per_cell = 500
         max_rna_count_per_cell = 25000
         min_atac_count_per_cell = 1000
@@ -67,30 +66,29 @@ process{
     }
 
     withName: LOAD {
-        cpus = 5
+        cpus = 8
         memory = 64.GB
         time = 30.m
     }
 
     withName: FIND_FEATURES {
-        cpus = 2
+        cpus = 1
         memory = 128.GB
         time = 30.m
     }
 
     withName: REBASE_FEATURES {
-        cpus = 5
+        cpus = 8
         memory = 64.GB
         time = 30.m
     }
 
     withName: MERGE {
-        cpus = 20
-        memory = 256.GB
+        cpus = 32
+        memory = 512.GB
         time = 2.h
     }
 }
-
 
 executor {
     $pbspro {
@@ -136,11 +134,4 @@ process {
             mode: "copy"
         ]
     }
-}
-
-// ------- ERROR SETTINGS ------- //
-process {
-    errorStrategy = errorStrategy = 'retry'
-    maxRetries    = 2
-    maxErrors     = '-1'
 }
