--- a/nextflow.config
+++ b/nextflow.config
@@ -2,7 +2,7 @@
 params {
 
     // Pipeline settings
-    join_projects = false
+    join_projects = true
     merge_samples = true
     save_individual = false
     save_unintegrated = false
@@ -84,8 +84,8 @@ process{
     }
 
     withName: MERGE {
-        cpus = 32
-        memory = 512.GB
+        cpus = 28
+        memory = 1000.GB
         time = 2.h
     }
 }
@@ -112,7 +112,8 @@ process {
             publishDir = [
                 overwrite: true,
                 path: "${params.outdir}/individual/",
-                mode: "copy"
+                mode: "copy",
+                saveAs: { filename -> filename.equals('failed_samples.txt') ? null : filename }
             ]
         }
     }
@@ -128,6 +129,14 @@ process {
     }
 
     withName: SAVE_PARAMS {
+        publishDir = [
+            overwrite: true,
+            path: "${params.outdir}",
+            mode: "copy"
+        ]
+    }
+
+    withName: SAVE_FAILED {
         publishDir = [
             overwrite: true,
             path: "${params.outdir}",
