added required nextflow parameters for atac doublet detection

--- a/conf/conda_env.yml
+++ b/conf/conda_env.yml
@@ -18,3 +18,4 @@ dependencies:
   - bioconductor-bsgenome.hsapiens.ucsc.hg38
   - bioconductor-genomicranges
   - bioconductor-biovizbase
+  - bioconductor-scdblfinder
