--- a/nextflow.config
+++ b/nextflow.config
@@ -24,6 +24,7 @@ params {
         max_nucleosome_signal = 3
         min_tss_enrichment = 1
         min_cells_per_sample = 50
+        doublet_pvalue = 0.05
 
     }
 
