--- a/nextflow.config
+++ b/nextflow.config
@@ -28,8 +28,8 @@ params {
         max_blacklist_ratio = 0.01
         remove_mt_genes = true
         remove_mt_peaks = true
-        doublet_pvalue = 0.05
-
+        atac_doublet_pvalue = 0.05
+        rna_doublets_per_thousand = 8
     }
 
     // Output settings
@@ -40,7 +40,7 @@ params {
 singularity {
   enabled = true
   autoMounts = true
-  cacheDir = "/rds/general/user/mat21/home/containers"
+  //cacheDir = "/rds/general/user/mat21/home/containers"
   runOptions = "-B /rds/,/rdsgpfs/,/rds/general/ephemeral/user/$USER/ephemeral/tmp/:/tmp,/rds/general/ephemeral/user/$USER/ephemeral/tmp/:/var/tmp"
 }
 
