--- a/conf/conda_env.yml
+++ b/conf/conda_env.yml
@@ -14,6 +14,7 @@ dependencies:
   - r-argparse
   - r-matrix=1.6_1
   - r-irlba
+  - r-remotes
   - bioconductor-ensdb.hsapiens.v86
   - bioconductor-bsgenome.hsapiens.ucsc.hg38
   - bioconductor-genomicranges
