--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -1,8 +1,5 @@
-on: 
-  push:
-    branches:
-      - main
-      - dev
+on: [push, pull_request]
+
 jobs: 
   build-container:
     name: build-container
