--- a/nextflow.config
+++ b/nextflow.config
@@ -19,7 +19,7 @@ params {
         expressed_gene_sample_pct = 10
         min_rna_count_per_cell = 500
         max_rna_count_per_cell = 25000
-        min_atac_count_per_cell = 1000
+        min_atac_count_per_cell = 500
         max_atac_count_per_cell = 100000
         max_mitochondrial_gene_pct = 10
         max_nucleosome_signal = 3
@@ -28,8 +28,11 @@ params {
         max_blacklist_ratio = 0.01
         remove_mt_genes = true
         remove_mt_peaks = true
+        filter_doublets = "rna" // rna, atac, union, intersection, none
         atac_doublet_pvalue = 0.05
         rna_doublets_per_thousand = 8
+        doublet_finder_cluster_res = 0.1
+
     }
 
     // Output settings
@@ -71,9 +74,9 @@ process{
     }
 
     withName: LOAD {
-        cpus = 2
-        memory = 64.GB
-        time = 30.m
+        cpus = 8
+        memory = 120.GB
+        time = 8.h
     }
 
     withName: FIND_FEATURES {
@@ -90,7 +93,7 @@ process{
 
     withName: MERGE {
         cpus = 40
-        memory = 750.GB
+        memory = 900.GB
         time = 8.h
     }
 }
