uncommented config cachedir

--- a/nextflow.config
+++ b/nextflow.config
@@ -43,7 +43,7 @@ params {
 singularity {
   enabled = true
   autoMounts = true
-  //cacheDir = "/rds/general/user/mat21/home/containers"
+  cacheDir = "/rds/general/user/$USER/home/containers"
   runOptions = "-B /rds/,/rdsgpfs/,/rds/general/ephemeral/user/$USER/ephemeral/tmp/:/tmp,/rds/general/ephemeral/user/$USER/ephemeral/tmp/:/var/tmp"
 }
 
